stderr
FizzBuzz.java:12: error: ';' expected
            return "Buzz"
                         ^
1 error
